# duckdb_viewer

./: .gitignore  README.md  justfile  pyproject.toml  upcoming_instructions.md  utils_get_schema.py
duckdb_browser/: main.py  main_window.py  model_sidebar_list.py  model_table.py  plotting_widget.py  plotting_widget_sns.py  sql_execution_widget.py  utils_get_schema.py  view_table.py
duckdb_browser/models/: sidebar_list.py  table.py
duckdb_browser/views/: table.py  table_view.py
