[tool.poetry]
name = "duckdb_browser"
version = "0.1.0"
description = ""
authors = ["ryan <exogenesis@protonmail.com>"]
license = "gpl"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygments = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
