[tool.poetry]
name = "duckdb_browser"
version = "0.1.0"
description = ""
authors = ["ryan <exogenesis@protonmail.com>"]
license = "gpl"
readme = "README.md"
packages = [{include = "*", from="duckdb_browser"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pygments = "^2.18.0"
numpy = "^2.2.0"
pyside6 = "^6.8.1"
typer = "^0.15.1"
pandas = "^2.2.3"
duckdb = "^1.1.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
duckdb-browser = "main:app"
